--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -1,3 +1,7 @@
+html {
+    overflow: hidden;
+}
+
 .el-card__body{padding: 0;height: 100%;}
 .el-card__body img{width: 100%;height: 100%;}
 .el-tabs__nav{margin-left: 20px;}
@@ -5,7 +9,7 @@
 .el-tab-pane {
     overflow: hidden scroll;
     float: left;
-    height: 434px;
+    height: 400px;
     width: 797px;
 }
 .el-tabs__item:hover{color: red!important;}
@@ -23,16 +27,17 @@
 .aplayer .aplayer-body {
     position: relative;   
 }
+
 .aplayer{overflow: visible!important;}
 
 /* 进度条 */
 .aplayer-controller, .aplayer-controller .aplayer-time{
     position: static!important;
-    top: 0;
+    top: -2px;
 }
 .aplayer-bar-wrap {
     position: absolute;
-    top: 0;
+    top: -3px;
     left: 0;
     /* background-color: red; */
     width: 1000px;
@@ -42,9 +47,77 @@
 }
 
 /* 图片 */
-.aplayer-pic {
-    margin-top: 3px;
+.aplayer-body .aplayer-pic{
+    width: 48px;
+    height: 48px;
+    margin-top: 9px;
+    margin-left: 9px;
+    border-radius: 4px;
+    position: static;}
+/* 播放时间 */
+.aplayer-body .aplayer-time{
+    position: absolute;
+    margin-bottom: 5px;
 }
+
+/* 播放音量 */
+.aplayer-body .aplayer-volume-wrap {
+    position: absolute;
+    right: 100px;
+    top: 20px;
+}
+
+.aplayer-body .aplayer-volume-wrap button {
+    width: 22px;
+    height: 22px;
+}
+.aplayer-body .aplayer-volume-bar{
+    height: 86px!important;
+    bottom: 10px!important;
+    z-index: 11!important;
+}
+.aplayer-body .aplayer-volume{background-color: red!important;}
+.aplayer-body .aplayer-volume-wrap .aplayer-volume-bar-wrap:after{left: -3px;right: 3px;height: 120px;background: #fff;z-index: 10;border-radius: 4px;}
+
+/* 播放模式 */
+.aplayer-body .aplayer-icon-mode{
+    right: 82px;
+    height: 22px;
+    width: 22px;
+    top: 20px;
+    position: absolute;
+}
+/* .aplayer-body .aplayer-icon-mode .inactive {
+    right: 60px;
+    height: 30px;
+    width: 30px;
+    top: 20px;
+    position: absolute;
+} */
+
+/* 播放列表 */
+.aplayer-controller .aplayer-time .aplayer-icon.aplayer-icon-menu{    
+    display: block!important;
+    position: absolute;
+    right: 15px;
+    height: 26px;
+    width: 26px;
+    top: 18px;
+}
+
+.aplayer-list{
+    height: 490px!important;
+    position: absolute;
+    bottom: 74px;
+    background: #fff;
+    right: 0;
+    box-shadow: -4px 4px 4px rgba(0, 0, 0, 0.24) ;
+    width: 320px;
+  }
+  .aplayer-list ol {height: 490px!important;}
+  .aplayer-list ol li .aplayer-list-author{width: 100px;white-space: nowrap;text-overflow:ellipsis;overflow: hidden;}
+  .aplayer-list ol li .aplayer-list-title{width: 160px;white-space: nowrap;text-overflow:ellipsis;overflow: hidden;}
+  
 
 /* 播放按钮 */
 .aplayer-pic .aplayer-button {
@@ -72,3 +145,20 @@
     height: 20px;
     padding: 3px;
 }
+
+.aplayer .aplayer-body .aplayer-info .aplayer-music .aplayer-title{max-width: 140px;height: 20px;line-height: 20px; display: inline-block;white-space: nowrap;text-overflow:ellipsis;overflow: hidden;}
+.aplayer .aplayer-body .aplayer-info .aplayer-music .aplayer-author{width: 100px;height: 20px;line-height: 20px; display: inline-block;white-space: nowrap;text-overflow:ellipsis;overflow: hidden;}
+.aplayer.aplayer-withlrc .aplayer-body .aplayer-pic{height: 48px!important;width: 48px!important;}
+.aplayer.aplayer-withlrc .aplayer-body .aplayer-info{padding: 0!important;height: 66px!important;}
+.aplayer-lrc{position: fixed!important;width: 100%;right: 175px;top: 20px;font-size: 20px;width: 240px;}
+.aplayer-withlrc .aplayer-body .aplayer-info .aplayer-music{line-height: 58px!important;}
+.aplayer-withlrc .aplayer-body .aplayer-info{text-indent: 5px;}
+.aplayer-list-cur{background: red!important;}
+.aplayer-controller .aplayer-time .aplayer-volume-wrap+.aplayer-icon{ right: 50px!important;}
+
+.music-list .el-submenu__title {
+  height: 45px !important;
+  line-height: 45px !important;
+  font-size:13px;
+}
+
